--- a/main/resources/org/openjfx/poo/css/general.css
+++ b/main/resources/org/openjfx/poo/css/general.css
@@ -18,7 +18,7 @@
 }
 
 
-.button {
+.button, .toggle-button {
     -fx-background-color: #d6d3d3;
     -fx-background-radius: 8;        
     -fx-border-radius: 8;
@@ -27,16 +27,19 @@
     -fx-font-weight:600;
 }
 
-.button:hover {
+.button:hover ,.toggle-button:hover{
     -fx-background-color: derive(#d6d3d3, -20%); 
     -fx-scale-x: 1.08;   
     -fx-scale-y: 1.08; 
     
 }
 
+.toggle-button:selected {
+    -fx-background-color: derive(#d6d3d3, -40%); 
+}
+
 .button:pressed {
     -fx-background-color: derive(#d6d3d3, -40%); 
-    -fx-background-color: #cccbcb;
 }
 
 .menu .label{
