--- a/main/resources/org/openjfx/poo/FXImportAction.fxml
+++ b/main/resources/org/openjfx/poo/FXImportAction.fxml
@@ -1,11 +1,221 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.poo.Controller.FXImportActionController">
-    
+<AnchorPane id="AnchorPane" minHeight="400.0" minWidth="400.0" prefHeight="730.0" prefWidth="1300.0" stylesheets="@css/general.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.poo.Controller.ImportActionController">
+   <children>
+      <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="143.0" layoutY="108.0" minViewportHeight="450.0" minViewportWidth="450.0" prefHeight="200.0" prefViewportHeight="450.0" prefViewportWidth="800.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <MenuBar fx:id="menuBar" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0">
+                     <menus>
+                        <Menu fx:id="mnName" mnemonicParsing="false" onAction="#User" text="Nome do Importador gonsalves da silva" />
+                        <Menu fx:id="mnRequestImport" mnemonicParsing="false" text="Importação">
+                           <items>
+                              <MenuItem fx:id="miRequest" mnemonicParsing="false" onAction="#RequestImport" text="Solicitar" />
+                              <MenuItem fx:id="miView" mnemonicParsing="false" onAction="#viewImport" text="Visualizar" />
+                           </items>
+                        </Menu>
+                        <Menu fx:id="mnViewPending" mnemonicParsing="false" onAction="#viewPending" text="Pedencias">
+                           <items>
+                              <MenuItem fx:id="miViewPending" mnemonicParsing="false" onAction="#viewPending" text="Visualiar" />
+                           </items>
+                        </Menu>
+                     </menus>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                     <padding>
+                        <Insets left="10.0" top="4.0" />
+                     </padding>
+                  </MenuBar>
+                  <StackPane prefHeight="150.0" prefWidth="1298.0" stylesheets="@css/forms.css" VBox.vgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
+                           <children>
+                              <StackPane minHeight="600.0" minWidth="900.0" prefHeight="600.0" prefWidth="1400.0">
+                                 <children>
+                                    <VBox alignment="CENTER" maxHeight="900.0" minHeight="500.0" minWidth="900.0" prefHeight="650.0" prefWidth="1400.0" StackPane.alignment="CENTER">
+                                       <children>
+                                          <StackPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="900.0">
+                                             <children>
+                                                <Label styleClass="sub-title" text="Importador">
+                                                   <StackPane.margin>
+                                                      <Insets bottom="10.0" />
+                                                   </StackPane.margin>
+                                                </Label>
+                                             </children>
+                                          </StackPane>
+                                          <GridPane alignment="CENTER" hgap="10.0" prefHeight="90.0" prefWidth="881.0">
+                                             <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                             </columnConstraints>
+                                             <rowConstraints>
+                                                <RowConstraints minHeight="45.0" percentHeight="50.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="45.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                             </rowConstraints>
+                                             <children>
+                                                <Label text="Numero:" />
+                                                <Label text="Estado:" GridPane.columnIndex="2" />
+                                                <Label text="Nome:" GridPane.rowIndex="1" />
+                                                <Label text="CPF/CNPJ:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfImportNumber" styleClass="plain-content" GridPane.columnIndex="1" />
+                                                <TextField fx:id="tfImporterName" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfImportStatus" styleClass="plain-content" GridPane.columnIndex="3" />
+                                                <TextField fx:id="tfImporterID" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                             </children>
+                                          </GridPane>
+                                          <Separator prefWidth="200.0">
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" right="20.0" top="10.0" />
+                                             </VBox.margin>
+                                          </Separator>
+                                          <StackPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="200.0">
+                                             <children>
+                                                <Label styleClass="sub-title" text="Produto">
+                                                   <font>
+                                                      <Font name="Blackadder ITC" size="12.0" />
+                                                   </font>
+                                                </Label>
+                                             </children>
+                                             <VBox.margin>
+                                                <Insets bottom="10.0" />
+                                             </VBox.margin>
+                                          </StackPane>
+                                          <GridPane alignment="CENTER" hgap="10.0">
+                                             <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                             </columnConstraints>
+                                             <rowConstraints>
+                                                <RowConstraints minHeight="45.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="45.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="45.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="45.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                             </rowConstraints>
+                                             <children>
+                                                <Label text="Nome:" />
+                                                <Label text="Fabricante:" GridPane.columnIndex="2" />
+                                                <Label text="Altura:" GridPane.rowIndex="1" />
+                                                <Label text="Comprimento:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                                <Label text="Largura:" GridPane.rowIndex="2" />
+                                                <Label text="Peso:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                                                <Label text="Restrito:" GridPane.rowIndex="3" />
+                                                <Label text="LI:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                                                <TextField fx:id="tfProductName" styleClass="plain-content" GridPane.columnIndex="1" />
+                                                <TextField fx:id="tfProductHeight" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfProductwidth" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                                <TextField fx:id="tfProductRestricted" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                                <TextField fx:id="tfProductManufacturer" styleClass="plain-content" GridPane.columnIndex="3" />
+                                                <TextField fx:id="tfProdutcLength" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfProductwiegth" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                                                <TextField fx:id="tfProductLI" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                                             </children>
+                                          </GridPane>
+                                          <HBox alignment="CENTER" maxHeight="300.0" minHeight="150.0" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                             <children>
+                                                <StackPane alignment="CENTER_LEFT" maxHeight="300.0" maxWidth="-Infinity" minHeight="100.0" minWidth="-Infinity" prefHeight="250.0" prefWidth="130.0">
+                                                   <children>
+                                                      <Label text="Descrição:" />
+                                                   </children>
+                                                </StackPane>
+                                                <StackPane prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                                                   <children>
+                                                      <TextArea fx:id="taProductDescription" prefHeight="200.0" prefWidth="200.0" styleClass="plain-content" />
+                                                   </children>
+                                                </StackPane>
+                                             </children>
+                                          </HBox>
+                                       </children>
+                                       <padding>
+                                          <Insets top="30.0" />
+                                       </padding>
+                                    </VBox>
+                                 </children>
+                              </StackPane>
+                              <StackPane minWidth="300.0" prefHeight="648.0" prefWidth="300.0" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <StackPane minHeight="200.0" minWidth="300.0" prefHeight="150.0" prefWidth="40.0">
+                                             <VBox.margin>
+                                                <Insets top="40.0" />
+                                             </VBox.margin>
+                                             <children>
+                                                <TextArea fx:id="taImportPendig" prefHeight="200.0" prefWidth="200.0" stylesheets="@css/box.css" wrapText="true">
+                                                   <styleClass>
+                                                      <String fx:value="plain-content" />
+                                                      <String fx:value="information-pending" />
+                                                   </styleClass>
+                                                </TextArea>
+                                             </children>
+                                          </StackPane>
+                                          <StackPane maxHeight="250.0" minHeight="-Infinity" prefHeight="48.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
+                                             <children>
+                                                <ComboBox fx:id="cbStatus" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="240.0" promptText="Selecione o status" />
+                                             </children>
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </StackPane>
+                                          <StackPane fx:id="stOutherStatus" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="300.0">
+                                             <children>
+                                                <TextField fx:id="tfOutherStatus" visible="false" />
+                                             </children>
+                                             <padding>
+                                                <Insets left="30.0" right="30.0" />
+                                             </padding>
+                                          </StackPane>
+                                          <StackPane maxHeight="250.0" minHeight="-Infinity" prefHeight="90.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                             <children>
+                                                <Button fx:id="btnAlter" mnemonicParsing="false" onAction="#btnAlter" styleClass="btn-description" stylesheets="@css/btn.css" text="Atualizar" />
+                                             </children>
+                                          </StackPane>
+                                          <StackPane maxHeight="250.0" minHeight="-Infinity" prefHeight="90.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
+                                             <children>
+                                                <Button fx:id="btnDelet" mnemonicParsing="false" onAction="#btnDeletAction" styleClass="btn-description" stylesheets="@css/btn.css" text="Excluir" />
+                                             </children>
+                                          </StackPane>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </StackPane>
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="40.0" left="40.0" right="40.0" />
+                     </padding>
+                  </StackPane>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
+   </children>
 </AnchorPane>
