--- a/main/resources/org/openjfx/poo/FXImportAction.fxml
+++ b/main/resources/org/openjfx/poo/FXImportAction.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
@@ -13,6 +12,7 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -168,12 +168,7 @@
                                                 <Insets top="40.0" />
                                              </VBox.margin>
                                              <children>
-                                                <TextArea fx:id="taImportPendig" prefHeight="200.0" prefWidth="200.0" stylesheets="@css/box.css" wrapText="true">
-                                                   <styleClass>
-                                                      <String fx:value="plain-content" />
-                                                      <String fx:value="information-pending" />
-                                                   </styleClass>
-                                                </TextArea>
+                                                <TextArea fx:id="taImportPendig" prefHeight="200.0" prefWidth="200.0" styleClass="information-pending" stylesheets="@css/box.css" wrapText="true" />
                                              </children>
                                           </StackPane>
                                           <StackPane maxHeight="250.0" minHeight="-Infinity" prefHeight="48.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
@@ -194,7 +189,7 @@
                                           </StackPane>
                                           <StackPane maxHeight="250.0" minHeight="-Infinity" prefHeight="90.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                                              <children>
-                                                <Button fx:id="btnAlter" mnemonicParsing="false" onAction="#btnAlter" styleClass="btn-description" stylesheets="@css/btn.css" text="Atualizar" />
+                                                <ToggleButton fx:id="tbAlter" mnemonicParsing="false" onAction="#tbAlterAction" styleClass="btRegister" stylesheets="@css/btn.css" text="Atualizar" />
                                              </children>
                                           </StackPane>
                                           <StackPane maxHeight="250.0" minHeight="-Infinity" prefHeight="90.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
