--- a/main/resources/org/openjfx/poo/FXImportAction.fxml
+++ b/main/resources/org/openjfx/poo/FXImportAction.fxml
@@ -54,9 +54,9 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
                            <children>
-                              <StackPane minHeight="600.0" minWidth="900.0" prefHeight="600.0" prefWidth="1400.0">
+                              <StackPane minHeight="500.0" minWidth="500.0" prefHeight="600.0" prefWidth="1400.0">
                                  <children>
-                                    <VBox alignment="CENTER" maxHeight="900.0" minHeight="500.0" minWidth="900.0" prefHeight="650.0" prefWidth="1400.0" StackPane.alignment="CENTER">
+                                    <VBox alignment="CENTER" maxHeight="900.0" minHeight="500.0" prefHeight="650.0" prefWidth="1400.0" StackPane.alignment="CENTER">
                                        <children>
                                           <StackPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="900.0">
                                              <children>
@@ -69,10 +69,10 @@
                                           </StackPane>
                                           <GridPane alignment="CENTER" hgap="10.0" prefHeight="90.0" prefWidth="881.0">
                                              <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="90.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="100.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="90.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="100.0" prefWidth="250.0" />
                                              </columnConstraints>
                                              <rowConstraints>
                                                 <RowConstraints minHeight="45.0" percentHeight="50.0" prefHeight="40.0" vgrow="SOMETIMES" />
@@ -108,10 +108,10 @@
                                           </StackPane>
                                           <GridPane alignment="CENTER" hgap="10.0">
                                              <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="130.0" prefWidth="130.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="90.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="100.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="90.0" prefWidth="130.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="100.0" prefWidth="250.0" />
                                              </columnConstraints>
                                              <rowConstraints>
                                                 <RowConstraints minHeight="45.0" prefHeight="40.0" vgrow="SOMETIMES" />
@@ -159,7 +159,7 @@
                                     </VBox>
                                  </children>
                               </StackPane>
-                              <StackPane minWidth="300.0" prefHeight="648.0" prefWidth="300.0" HBox.hgrow="ALWAYS">
+                              <StackPane minWidth="300.0" prefHeight="648.0" prefWidth="351.0" HBox.hgrow="ALWAYS">
                                  <children>
                                     <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                                        <children>
